--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@angular-devkit/build-angular": "^17.2.1",
     "@angular/cli": "^17.2.1",
     "@angular/compiler-cli": "^17.2.0",
+    "@eslint/js": "^9.7.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.7.0",
+    "globals": "^15.8.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -40,6 +43,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "typescript-eslint": "^7.16.1"
   }
 }
